5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1602_2894.log
== TEST (2019-03-20 19:05:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var= floatt(input("Qual o valor unitario do jogo?:R$ 20,00 "))

# Calculo do valor a ser pago, incluindo o frete:
total = ((8*var)+"R$45,00"

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 5
    var= floatt(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:06:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var= floatt(input("Qual o valor unitario do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total = ((8*var)+ 45,00

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.163384
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 5
    var= floatt(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:06:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var= floatt(input("Qual o valor unitario do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total = ((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.189722
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 5
    var= floatt(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:07:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var=floatt(input("Qual o valor unitario do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.111481
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 5
    var=floatt(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:07:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var=floatt(input(" Qual o valor unitario do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 5
    var=floatt(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:07:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var=floatt(input("jogo:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 5
    var=floatt(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:09:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var=float(input("Qual preço do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 5
    var=float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:09:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var=float(input("Qual preco do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 5
    var=float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:09:56) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var=float(input("Qual preco do jogo?:"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- ERROR:
File "XXXX", line 5
    var=float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:10:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual preco do jogo?:"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.162972
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
(54.84, 0)
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
(2893.0, 0)
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
(991941.0, 0)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual preco do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- OUTPUT:
(54.84, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual preco do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- OUTPUT:
(54.84, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:11:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual preco do jogo?:20,00"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45,00)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.194619
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
(54.84, 0)
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
(2893.0, 0)
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
(991941.0, 0)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:13:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual preco do jogo?:"))

# Calculo do valor a ser pago, incluindo o frete:
total =((8*var)+ 45.00)

# Impressao do valor total:
print(total)


-- EXECUTION TIME:
0.160512
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
